updated copyright in modified libp2p files,  pb.rc cleanup

--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -93,19 +93,19 @@ BEGIN
     PUSHBUTTON      "&View",IDC_OPEN,5,194,50,14,WS_DISABLED
     PUSHBUTTON      "&Create List",IDC_CREATE,60,194,50,14
     GROUPBOX        "Default Lists",IDC_DEFGROUP,6,2,332,74
-    AUTOCHECKBOX    "P2P",IDC_P2PLIST,13,15,50,10
-    AUTOCHECKBOX    "Spyware",IDC_SPYLIST,13,30,50,10
-    AUTOCHECKBOX    "Advertising",IDC_ADSLIST,13,45,50,10
-    AUTOCHECKBOX    "Education",IDC_EDULIST,13,60,50,10
+    CONTROL         "P2P",IDC_P2PLIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,15,50,10
+    CONTROL         "Spyware",IDC_SPYLIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,30,50,10
+    CONTROL         "Advertising",IDC_ADSLIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,45,50,10
+    CONTROL         "Education",IDC_EDULIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,60,50,10
     PUSHBUTTON      "View",IDC_OPENP2P,80,15,30,10,WS_DISABLED
     PUSHBUTTON      "View",IDC_OPENSPY,80,30,30,10,WS_DISABLED
     PUSHBUTTON      "View",IDC_OPENADS,80,45,30,10,WS_DISABLED
     PUSHBUTTON      "View",IDC_OPENEDU,80,60,30,10,WS_DISABLED
-    LTEXT           "Anti-P2P organizations",IDC_STATIC,138,16,150,8,SS_LEFT
-    LTEXT           "Malicious spyware and adware servers",IDC_STATIC,138,31,150,8,SS_LEFT
-    LTEXT           "Advertising and data tracker servers",IDC_STATIC,138,46,150,8,SS_LEFT
-    LTEXT           "Educational institutions and universities",IDC_STATIC,138,61,150,8,SS_LEFT
-    LTEXT           "(More lists available at iblocklist.com...)",IDC_MORELISTS,108,182,200,8,SS_LEFT
+    LTEXT           "Anti-P2P organizations",IDC_STATIC,138,16,150,8
+    LTEXT           "Malicious spyware and adware servers",IDC_STATIC,138,31,150,8
+    LTEXT           "Advertising and data tracker servers",IDC_STATIC,138,46,150,8
+    LTEXT           "Educational institutions and universities",IDC_STATIC,138,61,150,8
+    LTEXT           "(More lists available at iblocklist.com...)",IDC_MORELISTS,108,182,200,8
 END
 
 IDD_CREATELIST DIALOGEX 0, 0, 295, 121
@@ -130,7 +130,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | W
 CAPTION "Updating"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",0x1,5,146,258,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",PBS_SMOOTH,5,146,258,14
     PUSHBUTTON      "&Abort",IDC_ABORT,141,166,50,14
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,5,5,258,135
     DEFPUSHBUTTON   "&Close",IDC_CLOSE,86,166,50,14,WS_DISABLED
@@ -243,7 +243,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | W
 CAPTION "List"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SINGLESEL | LVS_ALIGNLEFT | LVS_OWNERDATA | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,24,358,156
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_OWNERDATA | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,24,358,156
     PUSHBUTTON      "&Cancel",IDCANCEL,315,185,50,14
     PUSHBUTTON      "&Save",IDOK,259,185,50,14
     PUSHBUTTON      "&Add",IDC_ADD,7,185,50,14
@@ -254,11 +254,11 @@ BEGIN
 END
 
 IDD_LOADING DIALOGEX 0, 0, 186, 28
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_DLGFRAME
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_CAPTION
 CAPTION "Loading..."
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",0x1,7,7,172,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",PBS_SMOOTH,7,7,172,14
 END
 
 IDD_ADDLIST DIALOGEX 0, 0, 295, 139
@@ -427,10 +427,11 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "Default Ports (applies to all profiles)",IDC_DEFGROUP,5,5,332,74
-    AUTOCHECKBOX    "80, 443 (HTTP, HTTPS - web traffic)",IDC_HTTPPORT,13,18,200,10
-    AUTOCHECKBOX    "21 (FTP - FTP transfer)",IDC_FTPPORT,13,33,200,10
-    AUTOCHECKBOX    "25 (SMTP - outgoing mail)",IDC_SMTPPORT,13,48,200,10
-    AUTOCHECKBOX    "110 (POP3 - incoming mail)", IDC_POP3PORT, 13, 63, 200, 10
+    CONTROL         "80, 443 (HTTP, HTTPS - web traffic)",IDC_HTTPPORT,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,18,200,10
+    CONTROL         "21 (FTP - FTP transfer)",IDC_FTPPORT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,33,200,10
+    CONTROL         "25 (SMTP - outgoing mail)",IDC_SMTPPORT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,48,200,10
+    CONTROL         "110 (POP3 - incoming mail)",IDC_POP3PORT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,63,200,10
     CONTROL         "",IDC_PORTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,5,85,334,98
     PUSHBUTTON      "&Add",IDC_ADD,178,194,50,14
     PUSHBUTTON      "&Edit",IDC_EDIT,233,194,50,14,WS_DISABLED
