--- a/src/peerblock/pb.vcproj
+++ b/src/peerblock/pb.vcproj
@@ -23,7 +23,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			>
@@ -107,7 +107,7 @@
 			Name="Debug|x64"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			>
@@ -191,7 +191,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops;$(SolutionDir)props\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -265,7 +265,7 @@
 			Name="Release|x64"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops;$(SolutionDir)props\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -340,7 +340,7 @@
 			Name="Release_(Vista)|Win32"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops;$(SolutionDir)props\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -414,7 +414,7 @@
 			Name="Release_(Vista)|x64"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops;$(SolutionDir)props\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -489,7 +489,7 @@
 			Name="Debug_(Vista)|Win32"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			>
@@ -573,7 +573,7 @@
 			Name="Debug_(Vista)|x64"
 			OutputDirectory="$(SolutionDir)bin\$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets="..\..\build\windows\common.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			>
