--- a/src/lib/libp2p/libp2p.vcproj
+++ b/src/lib/libp2p/libp2p.vcproj
@@ -22,7 +22,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\..\..\build\windows\common.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops"
 			CharacterSet="2"
 			ManagedExtensions="0"
 			>
@@ -87,7 +87,7 @@
 		<Configuration
 			Name="Debug|x64"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\..\..\build\windows\common.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops"
 			CharacterSet="2"
 			ManagedExtensions="0"
 			>
@@ -154,7 +154,7 @@
 		<Configuration
 			Name="Release|Win32"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\..\..\build\windows\common.vsprops;..\..\..\build\windows\release.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops;$(SolutionDir)props\release.vsprops"
 			CharacterSet="2"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -213,7 +213,7 @@
 		<Configuration
 			Name="Release|x64"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\..\..\build\windows\common.vsprops;..\..\..\build\windows\release.vsprops"
+			InheritedPropertySheets="$(SolutionDir)props\common.vsprops;$(SolutionDir)props\release.vsprops"
 			CharacterSet="2"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
