--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -673,7 +673,7 @@ BEGIN
             VALUE "FileDescription", "PeerBlock"
             VALUE "FileVersion", STRINGIFY(PB_VER_MAJOR) ", " STRINGIFY(PB_VER_MINOR) ", " STRINGIFY(PB_VER_BUGFIX) ", " STRINGIFY(PB_VER_BUILDNUM)
             VALUE "InternalName", "PeerBlock"
-            VALUE "LegalCopyright", "Copyright (C) 2009-2010 PeerBlock, LLC"
+            VALUE "LegalCopyright", "Copyright (C) 2009-2011 PeerBlock, LLC"
             VALUE "OriginalFilename", "peerblock.exe"
             VALUE "ProductName", "PeerBlock"
             VALUE "ProductVersion", STRINGIFY(PB_VER_MAJOR) ", " STRINGIFY(PB_VER_MINOR) ", " STRINGIFY(PB_VER_BUGFIX) ", " STRINGIFY(PB_VER_BUILDNUM)
@@ -712,8 +712,8 @@ BEGIN
         MENUITEM "&Disabled",                   ID_TRAY_DISABLED
         MENUITEM SEPARATOR
         MENUITEM "&Allow HTTP",                 ID_TRAY_BLOCKHTTP
-        MENUITEM "Allow HTTP for 15 min",       ID_TRAY_TEMPALLOWHTTP15
-        MENUITEM "Allow HTTP for 60 min",       ID_TRAY_TEMPALLOWHTTP60
+        MENUITEM "Allow HTTP for &15 min",      ID_TRAY_TEMPALLOWHTTP15
+        MENUITEM "Allow HTTP for &60 min",      ID_TRAY_TEMPALLOWHTTP60
         MENUITEM SEPARATOR
         MENUITEM "Always on &Top",              ID_TRAY_ALWAYSONTOP
         MENUITEM "Hide tray &menu",             ID_TRAY_HIDETRAYICON
